// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vanta vulnerabilities 1`] = `
Array [
  "Processed 3 records",
  "Processed records by stream: {\\\\\\"mytestsource__vanta__vulnerabilities\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 12 records",
  "Would write records by model: {\\\\\\"cicd_ArtifactVulnerability\\\\\\":1,\\\\\\"sec_Vulnerability\\\\\\":3,\\\\\\"sec_VulnerabilityIdentifier\\\\\\":3,\\\\\\"sec_VulnerabilityIdentifierRelationship\\\\\\":3,\\\\\\"vcs_RepositoryVulnerability\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`vanta vulnerabilities 2`] = `
Array [
  Object {
    "sec_VulnerabilityIdentifier": Object {
      "source": "Vanta",
      "type": Object {
        "category": "CVE",
        "detail": "CVE",
      },
      "uid": "CVE-2022-37601",
    },
  },
  Object {
    "sec_VulnerabilityIdentifierRelationship": Object {
      "identifier": Object {
        "source": "Vanta",
        "type": Object {
          "category": "CVE",
          "detail": "CVE",
        },
        "uid": "CVE-2022-37601",
      },
      "source": "Vanta",
      "vulnerability": Object {
        "source": "Vanta",
        "uid": "657191308e0674a0e8e62468",
      },
    },
  },
  Object {
    "sec_Vulnerability": Object {
      "affectedVersions": Array [
        "npm-loader-utils < 1.4.1",
      ],
      "description": "Prototype pollution vulnerability in function parseQuery in parseQuery.js in webpack loader-utils prior to version 2.0.3 via the name variable in parseQuery.js.",
      "discoveredAt": "2023-03-07T20:01:49.516Z",
      "severity": 9.8,
      "source": "Vanta",
      "title": "CVE-2022-37601",
      "uid": "657191308e0674a0e8e62468",
      "url": "https://github.com/test-org/test-repo/security/dependabot/76",
      "vulnerabilityIds": Array [
        "CVE-2022-37601",
      ],
    },
  },
  Object {
    "sec_VulnerabilityIdentifier": Object {
      "source": "Vanta",
      "type": Object {
        "category": "CVE",
        "detail": "CVE",
      },
      "uid": "CVE-2023-28154",
    },
  },
  Object {
    "sec_VulnerabilityIdentifierRelationship": Object {
      "identifier": Object {
        "source": "Vanta",
        "type": Object {
          "category": "CVE",
          "detail": "CVE",
        },
        "uid": "CVE-2023-28154",
      },
      "source": "Vanta",
      "vulnerability": Object {
        "source": "Vanta",
        "uid": "66353a575360cc947a8af658",
      },
    },
  },
  Object {
    "sec_Vulnerability": Object {
      "affectedVersions": Array [
        "npm-webpack >= 5.0.0, < 5.76.0",
      ],
      "description": "Webpack 5 before 5.76.0 does not avoid cross-realm object access. ImportParserPlugin.js mishandles the magic comment feature. An attacker who controls a property of an untrusted object can obtain access to the real global object.",
      "discoveredAt": "2024-05-03T19:26:15.231Z",
      "severity": 5.2,
      "source": "Vanta",
      "title": "CVE-2023-28154",
      "uid": "66353a575360cc947a8af658",
      "url": "https://github.com/test-org/test-repo/security/dependabot/18",
      "vulnerabilityIds": Array [
        "CVE-2023-28154",
      ],
    },
  },
  Object {
    "sec_VulnerabilityIdentifier": Object {
      "source": "Vanta",
      "type": Object {
        "category": "CVE",
        "detail": "CVE",
      },
      "uid": "CVE-2024-0743",
    },
  },
  Object {
    "sec_VulnerabilityIdentifierRelationship": Object {
      "identifier": Object {
        "source": "Vanta",
        "type": Object {
          "category": "CVE",
          "detail": "CVE",
        },
        "uid": "CVE-2024-0743",
      },
      "source": "Vanta",
      "vulnerability": Object {
        "source": "Vanta",
        "uid": "661a55f156ebe8ef9f74e841",
      },
    },
  },
  Object {
    "sec_Vulnerability": Object {
      "affectedVersions": Array [
        "nss:3.87.1",
      ],
      "description": "An unchecked return value in TLS handshake code could have caused a potentially exploitable crash. This vulnerability affects Firefox < 122, Firefox ESR < 115.9, and Thunderbird < 115.9.",
      "discoveredAt": "2024-04-13T09:52:49.659Z",
      "severity": 7.5,
      "source": "Vanta",
      "title": "CVE-2024-0743",
      "uid": "661a55f156ebe8ef9f74e841",
      "url": "https://console.aws.amazon.com/inspector/v2/home?region=us-east-1#/findings?findingArn=arn%123456",
      "vulnerabilityIds": Array [
        "CVE-2024-0743",
      ],
    },
  },
  Object {
    "vcs_RepositoryVulnerability": Object {
      "createdAt": "2023-03-07T20:01:49.516Z",
      "dueAt": "2024-01-17T15:26:43.534Z",
      "repository": Object {
        "name": "dolos",
        "organization": Object {
          "source": "github",
          "uid": "test-org",
        },
      },
      "source": "Vanta",
      "status": Object {
        "category": "Ignored",
        "detail": "Not applicable",
      },
      "url": "https://github.com/test-org/test-repo/security/dependabot/76",
      "vulnerability": Object {
        "source": "Vanta",
        "uid": "657191308e0674a0e8e62468",
      },
    },
  },
  Object {
    "vcs_RepositoryVulnerability": Object {
      "createdAt": "2024-05-03T19:26:15.231Z",
      "dueAt": "2024-06-02T19:26:20.454Z",
      "repository": Object {
        "name": "dolos",
        "organization": Object {
          "source": "github",
          "uid": "test-org",
        },
      },
      "source": "Vanta",
      "status": Object {
        "category": "Open",
        "detail": "",
      },
      "url": "https://github.com/test-org/test-repo/security/dependabot/18",
      "vulnerability": Object {
        "source": "Vanta",
        "uid": "66353a575360cc947a8af658",
      },
    },
  },
  Object {
    "cicd_ArtifactVulnerability": Object {
      "artifact": Object {
        "repository": Object {
          "organization": Object {
            "source": "github",
            "uid": "test-org",
          },
          "uid": "123",
        },
        "uid": "e99a18c428cb38d5f260853678922e03abd8334f",
      },
      "createdAt": "2024-04-13T09:52:49.659Z",
      "dueAt": "2024-05-13T09:59:10.288Z",
      "source": "Vanta",
      "status": Object {
        "category": "Open",
        "detail": "",
      },
      "url": "https://console.aws.amazon.com/inspector/v2/home?region=us-east-1#/findings?findingArn=arn%123456",
      "vulnerability": Object {
        "source": "Vanta",
        "uid": "661a55f156ebe8ef9f74e841",
      },
    },
  },
]
`;

exports[`vanta vulnerability remediations 1`] = `
Array [
  "Processed 3 records",
  "Processed records by stream: {\\\\\\"mytestsource__vanta__vulnerability_remediations\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 2 records",
  "Would write records by model: {\\\\\\"cicd_ArtifactVulnerability__Update\\\\\\":1,\\\\\\"vcs_RepositoryVulnerability__Update\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;
